<resources>
    <string name="app_name">Garden Glide</string>
    <string name="welcome_back">Welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">New user? Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="gglogo_description">App logo</string>
    <string name="arden_description">Decorative image</string>
    <string name="arrow_description">Back button</string>
    <string name="create_account">Create an account</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="terms_privacy_policy">By signing up, you agree to our Terms and Privacy Policy.</string>
    <string name="welcomeU">Welcome to your Marketplace, User</string>
    <string name="turn_off">TurnOff</string>
    <string name="watering_history">Watering History</string>
    <string name="system_status">System Status</string>
    <string name="current_level">80%</string>
    <string name="active">Active</string>
</resources>
