<?xml version="1.0" encoding="utf-8"?>
    <!-- res/layout/activity_auto1.xml -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top Section -->
    <ImageView
        android:id="@+id/user"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/user" />

    <ImageView
        android:id="@+id/time"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="305dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/time" />

    <ImageView
        android:id="@+id/date"
        android:layout_width="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginStart="20dp"
        android:layout_height="50dp"
        android:src="@drawable/date" />

    <ImageView
        android:id="@+id/topA"
        android:layout_width="50dp"
        android:layout_marginTop="600dp"
        android:layout_marginRight="20dp"
        android:layout_height="40dp"
        android:src="@drawable/topA" />

    <TextView
        android:id="@+id/turn_off_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/topA"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="turnOff" />

    <TextView
        android:id="@+id/watering_history_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="25dp"
        android:text="@string/watering_history" />

    <TextView
        android:id="@+id/system_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/watering_history_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/system_status" />

    <TextView
        android:id="@+id/current_level_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/system_status_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/current_level" />

    <TextView
        android:id="@+id/active_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_level_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/active" />

    <!-- Bottom Section -->

    <RelativeLayout
        android:id="@+id/bottom_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-18dp"
        android:padding="16dp">

        <!-- Additional Boxes and Text -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="105dp"
                android:layout_marginStart="70dp"
                android:text="In 4 days"
                android:textColor="#95aa96"
                android:textSize="12sp" />

        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="320dp"
            android:layout_marginStart="70dp"
            android:text="2 days ago"
            android:textColor="#8fa491"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="297dp"
            android:layout_marginStart="70dp"
            android:text="Last Watered"
            android:textColor="#404340"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="602dp"
            android:layout_marginStart="60dp"
            android:text="80%"
            android:textColor="#469200"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="579dp"
            android:layout_marginStart="60dp"
            android:text="Current Level"
            android:textColor="#494b48"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:layout_marginEnd="15dp">

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:layout_marginEnd="118dp"
            android:text="Water Tank Level"
            android:textColor="#2c302c"
            android:textSize="20sp" />
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:layout_marginStart="220dp"
        android:text="System Status"
        android:textColor="#313431"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="590dp"
        android:layout_marginStart="330dp"
        android:text="Active"
        android:textColor="#44a029"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginStart="30dp"
        android:text="Smart Watering System"
        android:textColor="#212521"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="152dp"
        android:text="Automatically waters your plants when needed."
        android:textColor="#555755"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/ggtit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="215dp"
        android:src="@drawable/ggtit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="400dp"
        android:text="Next Watering"
        android:textColor="#434643"
        android:textSize="15sp" />

    </RelativeLayout>
</RelativeLayout>